CAMEL-951: Builder must be public to let the fluent builder works.
git-svn-id: https://svn.apache.org/repos/asf/activemq/camel/trunk@702966 13f79535-47bb-0310-9956-ffa450edef68