@@ -58,6 +58,7 @@ public class DefaultAggregationCollection extends AbstractCollection<Exchange> i
         Object correlationKey = correlationExpression.evaluate(exchange);
         Exchange oldExchange = map.get(correlationKey);
         Exchange newExchange = exchange;
+
         if (oldExchange != null) {
             Integer count = oldExchange.getProperty(Exchange.AGGREGATED_COUNT, Integer.class);
             if (count == null) {
@@ -70,13 +71,17 @@ public class DefaultAggregationCollection extends AbstractCollection<Exchange> i
 
         // the strategy may just update the old exchange and return it
         if (newExchange != oldExchange) {
-            LOG.debug("put exchange:" + newExchange + " for key:"  + correlationKey);
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("put exchange:" + newExchange + " for key:"  + correlationKey);
+            }
             if (oldExchange == null) {
-                newExchange.setProperty(Exchange.AGGREGATED_COUNT, new Integer(1));
+                newExchange.setProperty(Exchange.AGGREGATED_COUNT, Integer.valueOf(1));
             }
             map.put(correlationKey, newExchange);
         }
+
         onAggregation(correlationKey, newExchange);
+
         return true;
     }
 
